# lingualeo-bot

./: .gitignore  .replit  deploy_agent.py  pyproject.toml  replit.md  run_bot.bat  run_updater.bat  start_all.bat  start_bot.bat
Lingualeo Bot/: README.md  api_client.py  api_client_fixed.py  api_response_debug.json  api_response_debug_531253663.json  check_training_page.py  chrome_logger.py  config.py  debug_page.html  get_repeat_count.py  requirements.txt  test_fix.py  test_real_translates.py  test_training_responses.py  test_training_simulation.py  training_simulation_results_20260105_153031.json  training_simulation_results_20260105_153639.json  utils.py  ИНТЕГРАЦИЯ_ИСПРАВЛЕНИЯ.md  КРАТКАЯ_ИНСТРУКЦИЯ.md
Lingualeo Bot/bulk add/: words.csv
Lingualeo Bot/lingua_leo_RU_EN/: config.py  raw_api_response.json  training_stats.csv  vocabulary.csv
Lingualeo Bot/lingualeo_pyth/: .gitignore  cookies_current.txt  db.py  db_sqlite.py  keys.py  lingualeo.db  migrate_to_sqlite.py  ruseng_results_531253663.json  tg_bot.py  training_results_12345.json
Lingualeo Bot/search_query_noon/: cookies.txt  curl_headers.txt  queries.txt  queries_done.txt  results - Copy.csv  results.csv  search.py  searchCopy.py  seed_keywords_1758118925.csv
attached_assets/: Pasted--2-7-2-7-MB-1-1-MB-s-0-00-02-Installing-collected-packa_1767692551554.txt  Pasted--FINAL-STATISTICS-Training-results-C-1767622108722_1767622108724.txt  Pasted--FINAL-STATISTICS-Training-results-Correct-answers-29-I_1767624930870.txt  Pasted--Replit--1767689258983_1767689258984.txt  content-1767702843712.md
(+125 files in other folders)
